# serix

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  action.yml  pyproject.toml  serix.toml
.github/workflows/: ci.yml  publish.yml  serix-example.yml
docs/blog-docs/: module-4-dev-log.md
examples/: broken_target.py  decorated_agent.py  golden_victim.py  golden_victim_anthropic.py  golden_victim_google.py  hardened_victim.py  http_agent.py  mock_vulnerable.py  record_demo.py  victim.py  vulnerable_for_healing.py  vulnerable_victim.py
scripts/: e2e_comprehensive_test.py  gate.sh  validate_html_report.py  validate_serix_v2.py
src/serix/: __init__.py  __main__.py  cli.py
src/serix/adapters/: __init__.py  openai.py
src/serix/cli/: __init__.py  legacy.py
src/serix/cli/commands/: __init__.py  demo_cmd.py  dev_cmd.py  init_cmd.py  status_cmd.py  test_cmd.py
src/serix/cli/output/: __init__.py  github.py  static.py
src/serix/core/: __init__.py  client.py  config_loader.py  constants.py  errors.py  events.py  protocols.py  recorder.py  run_config.py  target.py  types.py
src/serix/eval/: __init__.py  classifier.py  evaluator.py  remediation.py  rubric.py
src/serix/examples/: __init__.py
src/serix/fuzz/: __init__.py  adversary.py  engine.py  mutations.py  redteam.py  scenarios.py
src/serix/fuzz/personas/: __init__.py  base.py  confuser.py  extractor.py  jailbreaker.py  manipulator.py
src/serix/heal/: __init__.py  analyzer.py  engine.py  patcher.py  types.py
src/serix/integrations/: __init__.py  crewai.py  langchain.py
src/serix/regression/: __init__.py  runner.py  store.py
src/serix/report/: __init__.py  console.py  github.py  html.py  json_export.py  live_ui.py
src/serix/report/templates/: report.html
src/serix/sdk/: __init__.py  decorator.py
src/serix/services/: __init__.py  attack.py  config.py  healing.py  interceptor.py  judge.py  regression.py  report.py  storage.py  target.py
src/serix/ui/: __init__.py  render.py  theme.py
src/serix/workflows/: __init__.py  dev_workflow.py  test_workflow.py
src/serix_v2/: __init__.py
src/serix_v2/cli/: __init__.py  app.py  subcommand_help.py  theme.py
src/serix_v2/cli/commands/: __init__.py  demo_cmd.py  init_cmd.py  run_cmd.py  status_cmd.py  test_cmd.py
src/serix_v2/cli/prompts/: __init__.py  credential_wizard.py  (+1 more)
src/serix_v2/config/: __init__.py  loader.py  models.py  resolver.py  utils.py
src/serix_v2/core/: __init__.py  config.py  constants.py  contracts.py  errors.py  id_gen.py  protocols.py
src/serix_v2/demo/: __init__.py
src/serix_v2/engine/: __init__.py  adversary.py
src/serix_v2/providers/: __init__.py  utils.py
src/serix_v2/report/: __init__.py  github.py  html.py  schema.py
src/serix_v2/services/: __init__.py  chaos.py  credential_preflight.py  env_writer.py  fuzz.py  init_service.py  key_validator.py  regression.py  status.py
src/serix_v2/storage/: __init__.py  attack_store.py  campaign_store.py
src/serix_v2/targets/: __init__.py  factory.py  http_target.py  python_target.py
src/serix_v2/workflows/: __init__.py  test_workflow.py
tests/: conftest.py  test_cli.py  test_github.py  test_judge.py  test_mutations.py  test_store.py  test_turn_count.py
tests/behavioral/: __init__.py  conftest.py  test_run_config.py  test_workflow_flags.py
tests/cli/commands/: test_init_cmd.py  test_status_cmd.py
tests/cli/output/: __init__.py  test_github.py
tests/e2e/: __init__.py  test_dry_run_e2e.py  test_fuzz_only_e2e.py  test_no_report_e2e.py  test_real_api_e2e.py  test_regression_e2e.py  test_serix_v2_e2e.py
tests/regression/: __init__.py  test_cli_flags.py  test_critical_behaviors.py
tests/serix_v2/: __init__.py  mocks.py  test_integration.py  test_loop.py  test_protocol_parity.py
tests/serix_v2/config/: __init__.py  e2e_verify.py  test_loader.py  test_models.py  test_provider_profiles.py  test_resolver.py  test_utils.py
tests/serix_v2/core/: test_config_cascade.py  test_target_credential_error.py
tests/serix_v2/engine/: __init__.py  test_error_handling.py  test_exhaustive_payloads.py
tests/serix_v2/fixtures/: __init__.py  echo_agent.py  scanned_agent.py
tests/serix_v2/integration/: test_full_workflow.py
tests/serix_v2/laws/: __init__.py  test_law_compliance.py
tests/serix_v2/providers/: __init__.py  test_litellm_provider.py  test_litellm_retry.py
tests/serix_v2/report/: __init__.py  test_github.py  test_html.py  test_schema.py
tests/serix_v2/services/: __init__.py  test_chaos.py  test_chaos_integration.py  test_credential_preflight.py  test_fuzz_service.py  test_init_service.py  test_regression_service.py  test_status.py
tests/serix_v2/storage/: __init__.py  test_attack_store.py  test_campaign_store.py  test_directory_structure.py
tests/serix_v2/targets/: __init__.py  test_http_target.py  test_python_target.py  test_python_target_system_prompt.py
tests/serix_v2/workflows/: __init__.py  test_patch_aggregation.py  test_preflight.py  test_score_regression.py  test_test_workflow.py
tests/services/: __init__.py  test_config.py  test_healing.py  test_interceptor.py  test_regression.py  test_report.py  test_storage.py
tests/smoke/: __init__.py  test_cli_loads.py
tests/workflows/: test_dev_workflow.py
(+29 files in other folders)
