[project]
name = "serix"
version = "0.1.1"
description = "Automated adversarial testing for AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Yukta Thapliyal", email = "yukta@serixlabs.com"}]
keywords = ["ai", "agents", "security", "testing", "llm", "red-team", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/yuktathapliyal/serix"
Repository = "https://github.com/yuktathapliyal/serix"
Documentation = "https://github.com/yuktathapliyal/serix#readme"

[project.scripts]
serix = "serix.cli:app"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=4.5.0",
]
